--- a/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj
@@ -111,6 +111,7 @@
     <ClInclude Include="..\..\..\..\headers\QDelegate.h" />
     <ClInclude Include="..\..\..\..\headers\QLinearAllocator.h" />
     <ClInclude Include="..\..\..\..\headers\QPoolAllocator.h" />
+    <ClInclude Include="..\..\..\..\headers\QReferenceWrapper.h" />
     <ClInclude Include="..\..\..\..\headers\QStackAllocator.h" />
     <ClInclude Include="..\..\..\..\headers\QStringUnicode.h" />
     <ClInclude Include="..\..\..\..\headers\QType.h" />
