--- a/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj.filters
@@ -70,6 +70,7 @@
       <Filter>Memory</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\headers\EQAssertionType.h" />
+    <ClInclude Include="..\..\..\..\headers\QReferenceWrapper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\SQBoolean.cpp">
