--- a/trunk/testing/projects/CodeLite/QEUnitTests/Common/Common.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Common/Common.project
@@ -108,6 +108,7 @@
     <File Name="../../../../tests/unit/testmodule_common/CommonTestDefinitions.h"/>
     <File Name="../../../../tests/unit/testmodule_common/QDelegate_Test.cpp"/>
     <File Name="../../../../tests/unit/testmodule_common/TestModule_Common.cpp"/>
+    <File Name="../../../../tests/unit/testmodule_common/QReferenceWrapper_Test.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="TestSystem (shared)">
     <File Name="../../../../testsystem/CommonConfigDefinitions.h"/>
