--- a/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QThread_Test.cpp">
       <Filter>Tests\Threading</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QBinaryStreamWriter_Test.cpp">
+      <Filter>Tests\IO</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\testsystem\CommonConfigDefinitions.h">
