--- a/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
@@ -99,6 +99,7 @@
       <File Name="../../../../tests/unit/testmodule_tools/QConstBinarySearchTreeIterator_Test.cpp"/>
       <File Name="../../../../tests/unit/testmodule_tools/QConstBinarySearchTreeIteratorMock.h"/>
       <File Name="../../../../tests/unit/testmodule_tools/SQComparatorDefault_Test.cpp"/>
+      <File Name="../../../../tests/unit/testmodule_tools/QKeyValuePair_Test.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Time">
       <File Name="../../../../tests/unit/testmodule_tools/QDateTime_Test.cpp" ExcludeProjConfig=""/>
